# invictus-ai-agent-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  invictus_ai_copilot_plan_updated.md  pyproject.toml
.github/workflows/: ci.yml  deploy-azure.yml
apps/agent_api/src/agent_api/: __init__.py  main.py
apps/mcp_servers/deals/: pyproject.toml
apps/mcp_servers/deals/src/mcp_deals/: __init__.py  main.py  server.py  tools.py
apps/mcp_servers/deals/src/mcp_deals/data/: __init__.py  mock_data.py
apps/mcp_servers/deals/tests/: __init__.py
docs/: ASK_NON_STREAMING_POSTMAN_REQUESTS.md  ASK_STREAMING_POSTMAN_REQUESTS.md  COPILOT_API.md  PHASE1-IMPLEMENTATION.md  POSTMAN_REQUESTS.md  multi-agent-copilot.md
onboarding-pipeline-deals/: README.md
onboarding-pipeline-deals/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
onboarding-pipeline-deals/frontend/src/: App.tsx
onboarding-pipeline-deals/frontend/src/components/: CompanyNameModal.tsx  DealCard.tsx  DocumentsGrid.tsx  Navbar.tsx  OrgSetupModal.tsx  QuotaBar.tsx  SyncStatusCard.tsx
onboarding-pipeline-deals/frontend/src/context/: AuthContext.tsx
onboarding-pipeline-deals/frontend/src/hooks/: use-worker-progress.ts
onboarding-pipeline-deals/server/: .env.example  Dockerfile  docker-entrypoint.sh  requirements.txt  setup_db.sh  start_server.py
onboarding-pipeline-deals/server/app/: config.py  constants.py  database.py  main.py
onboarding-pipeline-deals/server/worker/: README.md  batch_analyzer.py  deal_resolver.py  drive_ingestion.py  field_extractor.py  parser.py  summarizer.py  vectorizer.py  worker.py
plans/: phase-0-repo-scaffolding.md  phase-1-mvp-copilot-streaming.md  phase-2-content-generation.md  phase-3-hitl-governance.md  phase-4-mcp-ecosystem.md  phase-5-production-hardening.md
requirements/: agent_api.txt  base.txt  dev.txt  mcp_admin_policy.txt  mcp_clients.txt  mcp_common.txt  mcp_deals.txt  mcp_opportunities.txt  mcp_reporting.txt  mcp_risk_planning.txt
scripts/: local_dev.sh
(+39 files in other folders)
