[project]
name = "invictus-ai-agent-platform"
version = "0.1.0"
description = "AI Copilot Agent Platform for Invictus AI"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agent_core", "agent_api", "mcp_common", "common"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "tavily.*",
    "azure.*",
    "pyodbc.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
